--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
                             <td>maths</td>
                             <td>cisco</td>
                      </tr>
-                    </table>   
+                    </table>
+                    <ol>
+                        <li>ordered list</li>
+                    </ol>   
+                    <ul>
+                        <li>unordered list</li>
+                    </ul>
+                    <dl>
+                        <li>descriptive list</li>
+                    </dl>
                        
 </body>
 </html>
